--- a/index.html
+++ b/index.html
@@ -6,16 +6,24 @@
     </head>
     <body>
         <script>
-            function changeSheep(n=null) {
-                if (n == null) {
-                    n = Math.floor(Math.random() * 4);
-                }
-                img = document.getElementById("ram-image");
-                img.setAttribute("src", `./assets/sheep${n}.png`);
-                img.onclick = function() {changeSheep() };
-            }
+            //nSheep = null;
+            //totSheeps = 4;
+            //function changeSheep(n=null) {
+            //    if (n == null) {
+            //        nSheep = Math.floor(Math.random() * totSheeps);
+            //    }
+            //    img = document.getElementById("ram-image");
+            //    img.setAttribute("src", `./assets/sheep${nSheep}.png`);
+            //}
             window.onload = function() {
-                changeSheep();
+            //    changeSheep();
+            //    img.onclick = function() {
+            //        nSheep += 1;
+            //        if (nSheep == totSheeps) {
+            //            nSheep = 0;
+            //        }
+            //        changeSheep(nSheep)
+            //    };
             }
         </script>
         <main>
@@ -23,21 +31,29 @@
         <div id="main-container">
             <div class="column">
                 <h3>Coding</h3>
-                <a href="https://stackoverflow.com">StackOverflow</a>
-                <a href="https://github.com/">GitHub</a>
-            </div>
-            <div class="column">
-                <h3>Work</h3>
                 <div>
-                    <h4>Mail</h4>
-                    <div>
-                        <a href="https://gmail.com">Gmail</a>
-                        <a href="https://mail.protonmail.com"</a>
-                    </div>
+                    <h4>Learn</h4>
+                        <a href="https://stackoverflow.com">StackOverflow</a>
                 </div>
                 <div>
-                <h4>Latex</h4>
-                <a href="https://www.overleaf.com/">Overleaf</a>
+                    <h4>Repos</h4>
+                    <a href="https://github.com/">GitHub</a>
+                    <a href="https://gitlab.com">GitLab</a>
+                </div>
+                <div>
+                    <h4>Challenge</h4>
+                    <a href="https://adventofcode.com">AoC</a>
+                    <a href="https://www.codewars.com">CodeWars</a>
+                    <a href="https://www.codingame.com/start">CodinGame</a>
+                    <a href="https://leetcode.com">LeetCode</a>
+                    <a href="https://platform.topcoder.com/onboard">TopCoder</a>
+                    <a href="https://www.codechef.com">CodeChef</a>
+                    <a href="https://www.hackerrank.com">HackerRank</a>
+                </div>
+                <div>
+                    <h4>Hosting</h4>
+                    <a href="https://console.hetzner.cloud/projects">Hetzner</a>
+                    <a href="https://railway.app">Railway.app</a>
                 </div>
             </div>
             <div class="column">
@@ -51,6 +67,25 @@
                     <a href="https://www.reddit.com/r/bestofredditorupdates">r/BestOfRedditorUpdates</a>
                     <a href="https://www.reddit.com/r/unixporn">r/unixp*rn</a>
                 </div>
+                <div>
+                    <h4>Twitch</h4>
+                    <a href="https://www.twitch.tv/">Twitch</a>
+                    <a href="https://www.twitch.tv/directory/all/tags/0739209c-9ef5-4ae0-997c-ccbeb864ca61">#co-working</a>
+                </div>
+            </div>
+            <div class="column">
+                <h3>Work</h3>
+                <div>
+                    <h4>Mail</h4>
+                    <div>
+                        <a href="https://gmail.com">Gmail</a>
+                        <a href="https://mail.protonmail.com">ProtonMail</a>
+                    </div>
+                </div>
+                <div>
+                <h4>Latex</h4>
+                <a href="https://www.overleaf.com/">Overleaf</a>
+                </div>
             </div>
             <div class="column">
                 <h3>Utils</h3>
@@ -58,6 +93,7 @@
                 <h4>Langs</h4>
                 <a href="https://context.reverso.net/translation/">Context Reverso</a>
                 <a href="https://translate.google.com">Translate</a>
+                <a href="https://forvo.com">Forvo</a>
                 </div>
             </div>
             <div class="column">
@@ -66,10 +102,14 @@
             </div>
             <div class="column">
                 <h3>Fun</h3>
+                <div>
+                <h4>Games</h4>
                 <a href="https://geotastic.net">Geotastic</a>
+                <a href="https://codenames.game">CodeNames</a>
+                </div>
             </div>
         </div>
-        <img id="ram-image"/>
+        <img id="ram-image" src="./assets/MerinoRam.svg">
         </main>
     </body>
 </html>
