--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             }
         </script>
         <main>
-        <h1>My Startpage</h1>
+        <h1>Welcome back, I guess</h1>
         <div id="main-container">
             <div class="column">
                 <h3>Coding</h3>
@@ -85,6 +85,7 @@
                 <div>
                 <h4>Latex</h4>
                 <a href="https://www.overleaf.com/">Overleaf</a>
+                <a href="https://www.caam.rice.edu/~heinken/latex/symbols.pdf">Symbols</a>
                 </div>
             </div>
             <div class="column">
